nav alignment css stabilizing and ms edge css fix

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -38,6 +38,7 @@
   
     &-subtitle,&-title {
       background-color:$primary;
+      max-width: 200px;
       padding: 5px 10px;
       
       font-family: 'VT323', monospace;
@@ -131,6 +132,7 @@
                 justify-content: center;
                 li {
                     background-color: $bg;
+                   
                     text-align: center;
                     clear: both;
                     width: 100%;
@@ -198,6 +200,7 @@
       }
       &-icons {
         min-width: 150px;
+        max-width: 200px;
         display: flex;
         align-items: center;
         justify-content: space-evenly;
@@ -215,5 +218,11 @@
       }
     }
   
+  }
+
+  .dropdown {
+    li {
+      padding:0px;
+    }
   }
   
